@@ -2,6 +2,8 @@
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-qt4-build): Add
 	prepare_directories() function.
+	(ebuild-mode-keywords-multilib): Remove a bunch of functions that
+	are not available anymore.
 
 2011-03-18  Christian Faulhammer  <fauli@gentoo.org>
 
